@@ -1,3 +1,7 @@
+2008-09-08  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #9282: Allow subkeys for TypoScript "config." array
+
 2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to issue #8996: htmlArea RTE: link to file not updated when changing case in file name
